# Chess

./: .gitignore  .gitmodules  CMakeLists.txt
chessCommon/include/communication/: CommException.h  Message.h
chessCommon/include/structure/: FigureData.h  chessPoint.h
client/: CMakeLists.txt
client/app/: main.cpp
client/include/app/: Launcher.h
client/include/chessGUI/: ChessField.h  ChessFrame.h  MainMenu.h  MenuOption.h
client/include/communication/: Connector.h  Message.h
client/include/structure/: FigureData.h  Move.h
client/src/app/: Launcher.cpp
client/src/chessGUI/: ChessField.cpp  ChessFrame.cpp  MainMenu.cpp
client/src/communication/: Connector.cpp
server/: CMakeLists.txt
server/app/: main.cpp
server/include/communication/: ClientConnector.h  CommunicationCentre.h  Message.h  ServerConnector.h
server/include/logic/: AbstractPlayer.cpp  AbstractPlayer.h  ComputerPlayer.h  Game.h  GameManager.h  HumanPlayer.h  MoveValidator.h
server/include/structure/: Bishop.h  Field.h  Figure.h  FigureData.h  King.h  Knight.h  Move.h  Movement.h  Piece.h  PieceFactory.h  Pieces.h  Queen.h  Rook.h  chessPoint.h
server/src/communication/: ClientConnector.cpp  CommunicationCentre.cpp  Message.cpp  ServerConnector.cpp
server/src/logic/: AbstractPlayer.cpp  ComputerPlayer.cpp  Game.cpp  GameManager.cpp  HumanPlayer.cpp  MoveValidator.cpp
server/src/structure/: Field.cpp  Figure.cpp  Piece.cpp  PieceFactory.cpp
server/test/: CMakeLists.txt
server/test/app/: unit_main.cpp
server/test/structure/: BishopTest.cpp  FieldTest.cpp  KingTest.cpp  KnightTest.cpp  PieceTest.cpp  QueenTest.cpp  RookTest.cpp
