cmake_minimum_required(VERSION 3.17)
project(Chess)

set(CMAKE_CXX_STANDARD 20)

include_directories(vendor/cereal/include)
include_directories(vendor/googletest/googletest/include)
include_directories(chessCommon/include)

find_package(GTest CONFIG REQUIRED)
option(PACKAGE_TESTS "Build the tests" ON)
if(PACKAGE_TESTS)
    enable_testing()
    set(BUILD_GMOCK ON)
    add_subdirectory(vendor/googletest)
    add_subdirectory("${PROJECT_SOURCE_DIR}/server/test" "${PROJECT_SOURCE_DIR}/server/test/test_output")
endif()
add_subdirectory("${PROJECT_SOURCE_DIR}/server" "${PROJECT_SOURCE_DIR}/server/server_output")
add_subdirectory("${PROJECT_SOURCE_DIR}/client" "${PROJECT_SOURCE_DIR}/client/client_output")
add_subdirectory(vendor/wxWidgets)
